Sat Dec 19 09:31:25 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/set.rb (initialize): Add check that argument is enumerable

Wed Dec 16 16:57:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/un.rb (httpd): try to convert port number to integer.

Wed Dec 16 15:05:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/un.rb (wait_writable): wait until target files can be
	  written actually.

	* lib/un.rb (mkmf): new command to create makefile.

	* lib/un.rb (rmdir): added -p option.

	* lib/un.rb (httpd): easy WEBrick HTTP server.

Tue Dec 15 11:48:41 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* string.c (rb_str_inspect): wrong result of UTF-8 inspect because of
	  the mistake of calculation.  reported by eban via IRC.

Sun Dec 13 23:07:05 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/*: added some tests from jruby-openssl.

Mon Dec  7 07:05:05 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/bigdecimal.rb: fix comparison operators [ruby-core:26646]

Mon Dec  7 07:01:19 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* object.c (rb_Float): Allow results of to_f to be NaN
	  [ruby-core:26733]

Mon Dec  7 06:43:20 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c (rb_ary_sample): Fix infinite loop bug [ruby-core:27075]

Sat Dec  5 13:19:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: default ac_cv_prog_CC to CC.

Fri Dec  4 21:51:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (marshal_load): should set taintness.  [ruby-dev:39723]

Thu Dec  3 22:42:09 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/stringio/test_stringio.rb: use 1.8 methods for easier backport.

Thu Dec  3 22:20:51 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/stringio/test_stringio.rb: imported tests from trunk. it has 2
	  failures which can be fixed by backporting r17739 from trunk.

Wed Dec  2 17:32:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
