@@ -1467,6 +1467,8 @@ module Net   #:nodoc:
 
     include HTTPHeader
 
+    BUFSIZE = 16*1024
+
     def initialize(m, reqbody, resbody, path, initheader = nil)
       @method = m
       @request_has_body = reqbody
@@ -1552,12 +1554,12 @@ module Net   #:nodoc:
       supply_default_content_type
       write_header sock, ver, path
       if chunked?
-        while s = f.read(1024)
+        while s = f.read(BUFSIZE)
           sock.write(sprintf("%x\r\n", s.length) << s << "\r\n")
         end
         sock.write "0\r\n\r\n"
       else
-        while s = f.read(1024)
+        while s = f.read(BUFSIZE)
           sock.write s
         end
       end
